Handling exceptions using try-except, more functions for numbers

--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -1090,13 +1090,329 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "1f0395d9-073d-458a-baa1-565e9090150c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ooops\n"
+     ]
+    }
+   ],
    "source": [
-    "# EXCEPTIONS\n"
+    "# EXCEPTIONS\n",
+    "# Used to flag when something goes wrong in the program. \n",
+    "list = [1,2,3,4]\n",
+    "# uncomment the line below to see the error. \n",
+    "# list[4]\n",
+    "\n",
+    "# python has a mechanism for intercepting errors and allowing to handle them in a custom way. \n",
+    "list = [1,2,3,4]\n",
+    "try:\n",
+    "    list[4]\n",
+    "except IndexError:\n",
+    "    print('Ooops')\n",
+    "# There is a hierarchy of different types of errors that can be caught. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "1985ed59-135d-4dea-b11f-6e7e3603bf17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.3"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary of Functions\n",
+    "# NUMBERS \n",
+    "# absolute value \n",
+    "abs(-12.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "ba55a1ea-d67d-4327-9f40-3ec5fda39d8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0b11111111'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# decimal to binary string \n",
+    "bin(255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "8b01a844-5292-4f4c-a8fa-6d2f84240089",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2+3j)"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# complex number \n",
+    "complex(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "7a5d329f-30ce-4f9f-ac1f-f94324038117",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0xff'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# decimal to hex string \n",
+    "hex(255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "977ee922-4166-4420-8ca8-664fe15b6cc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0o377'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# decimal to octal string \n",
+    "oct(255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "e4688f41-9a4a-4c85-a1ba-15141c07d4c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.11"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# round to n decimal places \n",
+    "round(1.111111, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "f608af3a-acfd-479b-9f76-70dc5188aa10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# factorial of a number \n",
+    "import math\n",
+    "math.factorial(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "7e8d8c92-f031-4d2d-896f-284bfe185426",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.302585092994046"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# natural logarithm \n",
+    "math.log(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "c6e3ae24-069b-48b4-a896-c96316715395",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256.0"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# x^y\n",
+    "math.pow(2, 8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "013193cf-3131-49e9-9d3d-dee038c0382a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# x^y\n",
+    "2**8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "be437cde-a307-4acd-9bec-a83c139858db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# square root\n",
+    "math.sqrt(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "00f08fd8-c1d9-47e9-9275-5d3ec7cf273b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.0, 6.123233995736766e-17, 1.633123935319537e+16)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Trigonometry functions (radians) \n",
+    "math.sin(math.pi/2), math.cos(math.pi/2), math.tan(math.pi/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "65a7da28-e737-4dd6-b340-6ba3c8d4ac94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.5707963267948966, 1.5707963267948966, 1.5707963267948966)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.asin(1.0), math.acos(6.1e-17), math.atan(1.6e+16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c564e9a-8569-4119-bf95-2a09026dc47d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
