functions for lists with examples

--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -1761,8 +1761,217 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "id": "0941ab6d-1ea3-49ba-9aa7-d2c5f9520a58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'c']"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary of Functions\n",
+    "# LISTS\n",
+    "# delete elements from array \n",
+    "a  = ['a', 'b', 'c']\n",
+    "del(a[1:2])\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "f8b7cfc6-5344-4167-a780-16e6cd9ff80d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, ['a', 'b', 'c', 'd'])"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# append an element at the end of the list\n",
+    "a = ['a', 'b', 'c']\n",
+    "a.append('d'), a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "419a2187-9dc7-4a26-b305-3a675f3b48b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# count occurrences of a particular element \n",
+    "a = ['a', 'b', 'a']\n",
+    "a.count('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "a34900cd-657d-460e-beab-71cf4d653032",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index position of firts occurrence of an element \n",
+    "a = ['a', 'b', 'c']\n",
+    "a.index('b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "5d79027c-735e-4e72-82d8-55788b595998",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, ['a', 'b', 'c'])"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# insert element at position i in the list\n",
+    "a = ['a', 'c']\n",
+    "a.insert(1, 'b'), a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "e334f288-9828-4aa7-a0ea-8793880570bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('b', ['a', 'c'])"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return last element and remove it\n",
+    "a = ['a', 'b', 'c']\n",
+    "a.pop(1), a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "8cdd5dc7-3c1c-4bbf-9c53-3fd2116668c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, ['a', 'b', 'c'])"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove element \n",
+    "a = ['a', 'b', 'c', 'c']\n",
+    "a.remove('c'), a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "ad0fa23f-4b56-4134-b394-e910614b096d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, ['c', 'b', 'a'])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reverse the list\n",
+    "a = ['a', 'b', 'c']\n",
+    "a.reverse(), a "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "b3c42f19-723d-4803-8e1b-b0bb8b00ee75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, ['a', 'b', 'c'])"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = ['a', 'c', 'b']\n",
+    "a.sort(), a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3b546d9-69c1-471b-8117-c4c321bceb2f",
    "metadata": {},
    "outputs": [],
    "source": []
