added python lessons - dictionary, readme doc up to date

--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -732,7 +732,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "guess a letter or whole word for an animal? c\n"
@@ -747,7 +747,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "guess a letter or whole word for an animal? b\n"
@@ -762,7 +762,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "guess a letter or whole word for an animal? h\n"
@@ -777,7 +777,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "guess a letter or whole word for an animal? d\n"
@@ -792,7 +792,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "guess a letter or whole word for an animal? o\n"
@@ -807,7 +807,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "guess a letter or whole word for an animal? g\n"
@@ -1970,8 +1970,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b3b546d9-69c1-471b-8117-c4c321bceb2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Summary of Functions\n",
+    "# DICTIONARY \n",
+    "# return number of items in the dictionary\n",
+    "d = {'a':1, 'b':2, 'c':3}\n",
+    "len(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "245639e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 1, 'c': 3}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# delete an item from the dictionary \n",
+    "d = {'a':1, 'b':2, 'c':3}\n",
+    "del(d['b'])\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "52b53e33-af0e-4030-ba4f-9c82a4b9df2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'c': 3}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del d['a']\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7dc7078a-c8bd-4d36-a6d6-ae147d1fef32",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if key exists in the dictionary\n",
+    "d = {'a':1, 'b':2, 'c':3}\n",
+    "'b' in d, 'x' in d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4423a6ce-e0e3-43f0-8d44-78701da8596b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove all items from the dictionary\n",
+    "d = {'a':1, 'b':2, 'c':3}\n",
+    "d.clear()\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "26f0037f-3ae4-4c20-acfc-f4ac8edaaa20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 0)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return value for key, or default if key not found\n",
+    "d = {'a':1, 'b':2, 'c':3}\n",
+    "d.get('b', 0), d.get('x', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79700d12-2bac-481a-a585-ed623eeaf76d",
    "metadata": {},
    "outputs": [],
    "source": []
