added python lessons - importing from modules

--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -2244,8 +2244,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "89702e58-d0c4-41d8-a86d-468632c3fdd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Object Orientation: Modules, Classes and Methods \n",
+    "# Custom python library is called module \n",
+    "# Object-orientation: programs are structured into classes, each responsible for its own behaviour. \n",
+    "# This helps to keep a check on program complexity and makes it easier to manage. This is done using classes and methods. \n",
+    "\n",
+    "# Modules \n",
+    "# create a group of functions and provide them in a convenient form for others to use or reuse in different projects \n",
+    "# module groups multiple objects and functions in a simple and elegant way. \n",
+    "# module name is same as the file name in which its constituents are defined. \n",
+    "\n",
+    "# using modules\n",
+    "# Somewhere in the Python installation is a file called random.py that contains the randint and other functions.\n",
+    "# Since there are so many modules, there is a real danger that different modules might have functions with the same name. \n",
+    "# Solution: None of the functions in the imported module are visible unless we prepend the module name and then a dot onto the front of the function name.\n",
+    "import random\n",
+    "random.randint(1, 6)\n",
+    "# uncomment to see the error\n",
+    "# randint(1, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8ef9fbad-7545-470b-bdf6-f2a17c6326f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using local name for a module, local to the python file\n",
+    "import random as r\n",
+    "r.randint(1, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "71f705bd-f1e0-4fec-aecd-62bca4ba58ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# When certain about conflict free usage \n",
+    "from random import randint\n",
+    "randint(1, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "3e95d8ea-585a-48f2-8b67-6099776a2cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import everything in one scoop\n",
+    "from random import *\n",
+    "randint(1, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c3e461f4-bd65-4ebe-9e32-aa36ceac133b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Useful Python Module and Libraries \n",
+    "# string: string utilities \n",
+    "# datetime: dates and times \n",
+    "# math: math functions \n",
+    "# pickle: data structures \n",
+    "# urllib.request: webpages \n",
+    "# tkinter: GUI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca468fdc-acfc-4e5e-814f-ff847d098793",
    "metadata": {},
    "outputs": [],
    "source": []
