Added python lessons - object orientation, classes encapsulations and inheritence

--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "id": "d0feb703-1531-4a19-9db6-0357fb867ca6",
    "metadata": {},
    "outputs": [
@@ -137,18 +137,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "range(1, 10)\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[74]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# FOR LOOP \u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m, \u001b[32m10\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[32m1\u001b[39m, \u001b[32m10\u001b[39m):\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mprint\u001b[39m(x)\n",
-      "\u001b[31mTypeError\u001b[39m: 'list' object is not callable"
+      "range(1, 10)\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
@@ -2368,7 +2367,205 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca468fdc-acfc-4e5e-814f-ff847d098793",
+   "id": "2cbb0130-179e-4a39-9265-269e8ebe4b14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Object Orientation \n",
+    "# Modules are part of object orientation\n",
+    "# Object orientation has same goals of grouping related items together, providing multiple things in a convenient form, structuring program into classes such that each is responsible for its own behaviour. \n",
+    "# It is about objects. \n",
+    "'abc'.upper()\n",
+    "# Here, 'abc' is a string. A string is an object. We are telling python that we want a copy of the string 'abc' but in uppercase. \n",
+    "# In object orientation terms, abc is an *instance* of the built-in class str and upper is a method on the class str. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0f0c38e8-6a33-4297-be23-1f73d9b6c255",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABC'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Object Orientation \n",
+    "# Modules are part of object orientation\n",
+    "# Object orientation has same goals of grouping related items together, providing multiple things in a convenient form, \n",
+    "# structuring program into classes such that each is responsible for its own behaviour. \n",
+    "# It is about objects. \n",
+    "'abc'.upper()\n",
+    "# Here, 'abc' is a string. A string is an object. We are telling python that we want a copy of the string 'abc' but in uppercase. \n",
+    "# In object orientation terms, abc is an instance of the built-in class str and upper is a method on the class str. \n",
+    "# note: \"instance of a class\" and \"method on a class\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "387778eb-9551-4b11-ba70-70a1221cf849",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# how to find out the class of an object\n",
+    "# using double underscores before and after the word class \n",
+    "'abc'.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1826c661-b801-47eb-8d2f-aca9cbbdd566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1].__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8cd0abb7-2b81-47cf-a4ce-4c9671867e1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.0.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "40f2fb66-e72e-49ab-8d59-769a05c9c81c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test:  Convert inches to mm\n",
+      "test:  converting to inches\n",
+      "debug:  Scaler.convert:  msg:  converted output =  50mm\n",
+      "test:  50mm\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defining Classes \n",
+    "# Create a class that does the job of converting measurements from one unit to another by multiplying a value by a scale factor. \n",
+    "# Give the class a catchy name \n",
+    "#11_converter_using_class\n",
+    "# listing the whole class \n",
+    "class ScalerConverter:    # class definition \n",
+    "    def __init__(self, units_from, units_to, factor):     \n",
+    "        self.units_from = units_from\n",
+    "        self.units_to = units_to\n",
+    "        self.factor = factor\n",
+    "\n",
+    "    def description(self):\n",
+    "        return 'Convert ' + self.units_from + ' to ' + self.units_to\n",
+    "\n",
+    "    def convert(self, value):\n",
+    "        y = value * self.factor\n",
+    "        if display_debug_msg: print('debug: ', 'Scaler.convert: ', 'msg: ', 'converted output = ', str(y) + self.units_to)\n",
+    "        return y\n",
+    "# testing the class\n",
+    "display_debug_msg = 1 # enable to print debug messages \n",
+    "c1 = ScalerConverter('inches', 'mm', 25)    # creates new instance of the class, specifies units converted from and to, as well as the scaling factor \n",
+    "print('test: ',c1.description())\n",
+    "print('test: ', 'converting to inches')\n",
+    "print('test: ', str(c1.convert(2)) + c1.units_to)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "245bc258-fe08-488e-b6e0-d935b799ec2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Notes on Classes \n",
+    "# def __init__() is a function definition. \n",
+    "## This function can only be used via an instance of this class. This is also called method for the class. \n",
+    "## This method is automatically called as part of initiation. \n",
+    "## Number of parameters depend on parameters supplied during class instance creation.\n",
+    "## self is always the first parameter. Self refers to the object itself. \n",
+    "## inside __init__(): new variables are created using assignments. These variables belong to the object and have their initial values set from the parameter set passed. \n",
+    "## __init__() is used to initialize and assign variables with default values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a8cc3a0a-afd6-4c87-b18d-24351b2607ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encapsulation with Classes \n",
+    "## Class should encapsulate everything that has to do with the class. E.g. storing data in variables, methods on the data\n",
+    "## All methods (including __init__()) must have self as a first parameter. The methods may or maynot need it to access the data of the class to which it belongs. \n",
+    "## Each data that the methods use is called parameter. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "50c79c61-09a3-4fcd-8b76-7a8b9659c8f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inheritance \n",
+    "## Concept used to reduce and sometimes eliminate repearing code. Recall the well known principle in programming: DRY = Don't Repeat Youself! \n",
+    "# Idea of inheritence in classes is that when you want a specialized version of a class that already exists, you inherit all the parent class's variables and methods \n",
+    "# and just add new ones or override the ones that are different. \n",
+    "# Class diagrams are used for representation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8aad7e6e-8ec4-43de-9903-ddbf90d44fc9",
    "metadata": {},
    "outputs": [],
    "source": []
