Added python lesson - creating sub-class using inheritance, invoking methods, overriding methods, reusing methods

--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -2476,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "40f2fb66-e72e-49ab-8d59-769a05c9c81c",
    "metadata": {},
    "outputs": [
@@ -2485,8 +2485,8 @@
      "output_type": "stream",
      "text": [
       "test:  Convert inches to mm\n",
-      "test:  converting to inches\n",
-      "debug:  Scaler.convert:  msg:  converted output =  50mm\n",
+      "test:  converting 2 inches\n",
+      "debug:  ScaleConverter.convert:  msg:  converted output =  50mm\n",
       "test:  50mm\n"
      ]
     }
@@ -2508,13 +2508,13 @@
     "\n",
     "    def convert(self, value):\n",
     "        y = value * self.factor\n",
-    "        if display_debug_msg: print('debug: ', 'Scaler.convert: ', 'msg: ', 'converted output = ', str(y) + self.units_to)\n",
+    "        if display_debug_msg: print('debug: ', 'ScaleConverter.convert: ', 'msg: ', 'converted output = ', str(y) + self.units_to)\n",
     "        return y\n",
     "# testing the class\n",
     "display_debug_msg = 1 # enable to print debug messages \n",
     "c1 = ScalerConverter('inches', 'mm', 25)    # creates new instance of the class, specifies units converted from and to, as well as the scaling factor \n",
     "print('test: ',c1.description())\n",
-    "print('test: ', 'converting to inches')\n",
+    "print('test: ', 'converting 2 inches')\n",
     "print('test: ', str(c1.convert(2)) + c1.units_to)"
    ]
   },
@@ -2564,8 +2564,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "8aad7e6e-8ec4-43de-9903-ddbf90d44fc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test:  Convert C to F\n",
+      "test:  converting 20C\n",
+      "debug:  ScaleConverter.convert:  msg:  converted output =  36.0F\n",
+      "debug:  ScaleAndOffsetConverter.convert:  msg:  converted output =  68.0F\n",
+      "test:  (68.0, 68.0)F\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class definition using inheritance \n",
+    "# parent class \n",
+    "class ScaleConverter:    # class definition \n",
+    "    def __init__(self, units_from, units_to, factor):     \n",
+    "        self.units_from = units_from\n",
+    "        self.units_to = units_to\n",
+    "        self.factor = factor\n",
+    "\n",
+    "    def description(self):\n",
+    "        return 'Convert ' + self.units_from + ' to ' + self.units_to\n",
+    "\n",
+    "    def convert(self, value):\n",
+    "        y = value * self.factor\n",
+    "        if display_debug_msg: print('debug: ', 'ScaleConverter.convert: ', 'msg: ', 'converted output = ', str(y) + self.units_to)\n",
+    "        return y\n",
+    "# derived/child/sub class with customizations \n",
+    "class ScaleAndOffsetConverter(ScaleConverter):    # specify the parent class for a class \n",
+    "    def __init__(self, units_from, units_to, factor, offset):\n",
+    "        ScaleConverter.__init__(self, units_from, units_to, factor)    # first invokes the parent method \n",
+    "        self.offset = offset\n",
+    "\n",
+    "    def convert(self, value):    # overrides the convert method from the parent class \n",
+    "        y1 = ScaleConverter.convert(self, value) + self.offset    # note how this invokes and reuses parent method! \n",
+    "        y2 = value * self.factor + self.offset\n",
+    "        if display_debug_msg: print('debug: ', 'ScaleAndOffsetConverter.convert: ', 'msg: ', 'converted output = ', str(y1) + self.units_to)\n",
+    "        return y1, y2\n",
+    "\n",
+    "# testing the derived class\n",
+    "display_debug_msg = 1 # enable to print debug messages \n",
+    "c2 = ScaleAndOffsetConverter('C', 'F', 1.8, 32)\n",
+    "print('test: ',c2.description())\n",
+    "print('test: ', 'converting 20C')\n",
+    "print('test: ', str(c2.convert(20)) + c2.units_to)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "063acbf7-3b02-42da-9d7f-ca47462ec6c1",
    "metadata": {},
    "outputs": [],
    "source": []
