few latest changes

--- a/0_begin_here/use_jupyter/how-to-python.ipynb
+++ b/0_begin_here/use_jupyter/how-to-python.ipynb
@@ -2622,7 +2622,9 @@
    "id": "063acbf7-3b02-42da-9d7f-ca47462ec6c1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Files \n"
+   ]
   }
  ],
  "metadata": {
