added 3.1.4 model evaluation and example

--- a/3_python_for_ml/use_scikit-learn/how-to-scikit-learn.ipynb
+++ b/3_python_for_ml/use_scikit-learn/how-to-scikit-learn.ipynb
@@ -2080,9 +2080,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b70ec253-24b4-4e1a-bf8f-c922bcab2f67",
+   "metadata": {},
+   "source": [
+    "#### 3.1.4 Model evaluation \n",
+    "* Model fitting doesn't always gurantee prediction accuracy. A lot depends on data used for training and data used in application. And hence the model needs to be directly evaluated.\n",
+    "* scikit-learn provides various tools for model evaluation.\n",
+    "Example: cross-validation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "bc158bb4-4e30-4624-9fe6-624d198de141",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'fit_time': array([0.00689983, 0.00723624, 0.00536823, 0.00484586, 0.00484324]), 'score_time': array([0.00065804, 0.00042796, 0.00034094, 0.000283  , 0.00036192]), 'test_score': array([1., 1., 1., 1., 1.])}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "\n",
+    "# load the dataset and model \n",
+    "X, y = make_regression(n_samples=1000, random_state=0)\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "# results \n",
+    "result = cross_validate(lr, X, y)    # defaults to 5-fold CV\n",
+    "print(result)\n",
+    "\n",
+    "# check r_squared score \n",
+    "result['test_score']    # score is high because this particular dataset is easy "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99c96b82-9828-4cf3-bc2b-19ec1d309882",
+   "id": "2a3abc89-469f-4960-b36e-1f50d50bdf69",
    "metadata": {},
    "outputs": [],
    "source": []
